--- a/taui/index.html
+++ b/taui/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://www.bostonhousing.org/favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="app-root"></div>
     <script src="assets/index.js"></script>
   </body>
 </html>
